--- a/style.css
+++ b/style.css
@@ -198,3 +198,94 @@ nav.scrolled {
   margin-right: 90px;
   margin-top: 50px;
 }
+
+.blog-container{
+  position: relative;
+  background: black;
+  overflow: hidden;
+}
+.blog-bg{
+  opacity: 0.2;
+  z-index: -10;
+}
+
+
+.container-blog {
+  padding: 2em;
+  max-width: 68rem;
+  position: absolute;
+  left: 100px;
+  bottom: -4050px;
+}
+
+.flex {
+  display: flex;
+  gap: 2em;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+.flex > * {
+  flex-grow: 1;
+  flex-basis: 0;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  min-width: 15rem;
+  max-width: calc(12.5rem + 13vw);
+  background: #fff;
+  overflow: hidden;
+  position: relative;
+}
+
+
+.card >img {
+  display: block;
+  max-width: 100%;
+  aspect-ratio: 16 / 9;
+  object-fit: cover;
+  height: auto;
+  margin-bottom: 1em;
+}
+
+.card-body {
+  height: 200px;
+  padding: 1em 0;
+}
+
+.card-body >h3 {
+  text-align: center;
+  color: #999fff;
+  font-size: 1.3rem;
+  margin-bottom: 0.5rem;
+}
+
+.card-body >p {
+  color: #0009;
+  font-style: italic;
+  font-weight: 700;
+  text-align: center;
+  margin: 1em auto;
+  padding-inline: 0.5em;
+  max-width: 35ch;
+}
+
+.footer{
+  position: absolute;
+  bottom: -4900px;
+  left: 400px;
+  text-align: center;
+  color: white;
+  font-size: 20px;
+font-family: 'Lato', sans-serif;
+font-weight: 300;
+word-spacing: 4px;
+}
+
+.icons >img{
+  height: 28px;
+  padding: 10px;
+  padding-top: 50px;
+}
